--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,4 +1,4 @@
-game_active: true
+game_active: false
 messages:
   game_explanation: |-
     <yellow>✦</yellow> <gold><bold>EGG BATTLE</bold></gold> <yellow>✦</yellow>
